[Web Vitals] Fix invisible text while font loads

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -10,6 +10,7 @@
       format("woff"),
     url("/fonts/quran/hafs/nastaleeq/indopak/indopak-nastaleeq-waqf-lazim-v4.ttf")
       format("truetype");
+  font-display: swap;
 }
 
 // TODO: we're not rendering text_uthmani anymore, do we need this font face?
@@ -18,6 +19,7 @@
   src: local("me_quran2"),
     url("/fonts/quran/hafs/me_quran/me_quran-2.woff2") format("woff2"),
     url("/fonts/quran/hafs/me_quran/me_quran-2.woff2") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -27,6 +29,7 @@
       format("woff2"),
     url("/fonts/quran/hafs/uthmanic_hafs/UthmanicHafs1Ver18.ttf")
       format("truetype");
+  font-display: swap;
 }
 
 // TODO: regenerate this font and add font-family name
@@ -76,6 +79,7 @@
   font-family: "NotoSerifBengali";
   src: local("Noto Serif Bengali"),
     url("/fonts/lang/bengali/NotoSerifBengali-Regular.woff2");
+  font-display: swap;
 }
 
 @font-face {
